# ZygiskNext

./: .gitignore
loader/src/: CMakeLists.txt
loader/src/common/: logging.cpp
loader/src/injector/shadow/: sh_hook.cpp
